--- a/folder8/index1.html
+++ b/folder8/index1.html
@@ -12,6 +12,11 @@
     <div class="container">
       <p>Hallo selamat pagi semuanya</p>
     </div>
->>>>>>> master
+    <div class="container">
+      <p>Hallo ada apa memangnya</p>  
+    </div>
+    <div class="container">
+      <p>Ada yang salah ya memangnya</p>  
+    </div>
   </body>
 </html>
